--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@tailwindcss/vite": "^4.1.11",
     "cannon": "^0.6.2",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11",
     "three": "^0.178.0"
   },
   "devDependencies": {
